--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -19,7 +19,7 @@
             <div id="main">
                 <h1 style="color: red;">There has been an error!<br> Reason: {{ error_message }}</h1>
      
-                 <p>Please go back to the app homepage using the button below.</p>
+                 <p>Please try refreshing the page or go back to the app homepage using the button below and try again.</p>
                  
                  <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
             </div>
