--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -23,7 +23,7 @@
 
             <h2>What is Am I Cancelled?</h2>
             <p id="main_text">
-                Am I Cancelled? is a Twitter App that searches through a large bank of words that may have been socially acceptable<br> years ago, but no longer have a place in today's society. It goes through your entire Twitter account history searching for<br> these terms in the word bank.
+                Am I Cancelled? is a Twitter App that searches through a large bank of words that may be cancel-worthy. <br> It goes through your entire Twitter account history searching for<br> these terms in the word bank.
                 <br>
             </p>
             <h2>Have Word Suggestions?</h2>
