--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -23,12 +23,12 @@
 
             <h2>What is Am I Cancelled?</h2>
             <p id="main_text">
-                Am I Cancelled? is a Twitter App that searches through a large bank of words that may be cancel-worthy. <br> It goes through your entire Twitter account history searching for<br> these terms in the word bank.
+                Am I Cancelled? is a Twitter App that searches through a large bank<br>of words that may be cancel-worthy. <br> It goes through your entire Twitter account history searching for<br> these terms in the word bank.
                 <br>
             </p>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
-                If you wish to know the list of words used or have any words that may not be included in the search,<br>please email me using the email link in the footer of this page.
+                If you wish to know the list of words used or have any words<br>that may not be included in the search,<br>please email me using the email link in the footer of this page.
             </p>
     
             <br>
