--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -34,11 +34,11 @@
             <br>
             <h4>* Disclaimers *</h4>
             <p id="main_text">
-                Due to the nature of the Twitter Search API, accounts that are private will not be able to use this.
+                Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br>
-                I do not collect or store any of your information. All of the authentication is done by the Twitter Standard.
+                I do not collect or store any of your information.<br>All of the authentication is done by the Twitter Standard.
                 <br>
-                This is my first official project, so it may not be perfect. Please contact me if there any major bugs.
+                This is my first official project, so it may not be perfect.<br>Please contact me if there any major bugs.
                 <br>
                 Lastly, I hope you enjoy it. :)
             </p>
