--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -32,6 +32,12 @@
             </p>
     
             <br>
+            <h4>Known Bugs</h4>
+            <p id="main_text">
+                When trying to login, a failure may occur which results in an error page. <br> This is a known bug that only happens sometimes.<br>
+                I am working on a solution to fix this. Please try following the steps<br>provided on the error page if it does not work on the first login attempt.
+            </p>
+
             <h4>* Disclaimers *</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
