--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -36,7 +36,7 @@
             </p>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
-                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.
+                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3">@tonyalas3.</a>
             </p>
     
             <br>
@@ -54,7 +54,7 @@
                 <br><br>
                 This is my first official project, so it may not be perfect.<br>Please contact me if there any major bugs.
                 <br><br>
-                You may find that some words are not cancel-worthy in the given context of the tweet, please ignore.
+                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
