--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -26,8 +26,8 @@
             <div id="main">
                 <h1 style="color: red;">There has been an error!<br> Reason: {{ error_message }}</h1>
      
-                <h2><b>If this is your first time seeing this message after logging in:</b></h2>
-                 <p><b>please try refreshing this page until it works</b> <br>or if it still does not work<br> go back to the app homepage using the button below and try again.</p>
+                <h4>If this is your first time seeing this message after logging in:</h4>
+                 <p id="main_text"><b>please try refreshing this page until it works</b> <br>or if it still does not work<br> go back to the app homepage using the button below and try again.</p>
                  
                  <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
             </div>
