--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -38,6 +38,10 @@
             <p id="main_text">
                 If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3">@tonyalas3.</a>
             </p>
+
+            <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
+                <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
+             </blockquote>
     
             <h4>Known Bugs</h4>
             <p id="main_text">
@@ -60,6 +64,7 @@
 
         </div>
     </div>
+    <script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
