--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -45,19 +45,19 @@
     
             <h4>Known Bugs</h4>
             <p id="main_text">
-                When trying to login, a failure may occur which results in an error page. <br> This is a known bug that only happens sometimes.<br>
+                When trying to login, a failure may occur which results in an error page. <br> This is a known bug that strangely only happens sometimes.<br>
                 I am working on a solution to fix this. Please try following the steps<br>provided on the error page if it does not work on the first login attempt.
             </p>
 
-            <h4>* Disclaimers *</h4>
+            <h4>Disclaimers</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
-                I do not collect or store any of your information.<br>All of the authentication is done following the Twitter Standard.
+                I do <b>not</b> collect or store any of your information.<br>All of the authentication is done following the Twitter + OAuth standard.
                 <br><br>
                 This is my first official project, so it may not be perfect.<br>Please contact me if there any major bugs.
                 <br><br>
-                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.
+                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.<br>Ultimately, I hope this can be used responsibly.
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
