--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -31,12 +31,12 @@
 
             <h2>What is Am I Cancelled?</h2>
             <p id="main_text">
-                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy and checks your account for them. <br> Often times people can change over many years, so they at least deserve a second chance.
+                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy, and then checks your account for them. <br> Often times people can change over many years, so they at least deserve a second chance.
                 <br>
             </p>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
-                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3">@tonyalas3.</a>
+                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
             <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
