--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -31,7 +31,7 @@
 
             <h2>What is Am I Cancelled?</h2>
             <p id="main_text">
-                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy, and then checks your account for them. <br> Often times people can change over many years, so they at least deserve a second chance.
+                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
                 <br>
             </p>
             <h2>Have Word Suggestions?</h2>
