--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -50,6 +50,7 @@
             </p>
 
             <h4>Disclaimers</h4>
+            <h4>Test testsetsetestes</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
@@ -68,7 +69,7 @@
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
-        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link">Visit my Personal Website.</a>
+        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Visit my Personal Website.</a>
         </p>
     </footer>
 
