--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -37,7 +37,7 @@
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
-            <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link">Visit my Personal Website.</a>
+            <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Visit my Personal Website.</a>
             </p>
     </footer>
 
