--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -29,7 +29,7 @@
                 <h4>If this is your first time seeing this message after logging in:</h4>
                 <p id="main_text">Please try refreshing this page until it works.</p> 
                 <h4>Otherwise:</h4> 
-                <p>Please go back to the app homepage using the button below and try again.</p>
+                <p id="main_text">Please go back to the app homepage using the button below and try again.</p>
                  
                  <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
             </div>
