--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -44,7 +44,7 @@
                     <h1>You are not cancelled!</h1>
                 {% endif %}
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
-                <h4>Tip 2: Protected Twitter accounts will not work with this due to how Twitter works.</h4>
+                <h4>Tip 2: Protected Twitter accounts will not work with this due to how the Twitter search works.</h4>
                 <h4>(Do not refresh this page, otherwise an error may occur)</h4>
                 {% for tweet,id,username in zipped %}
                <!-- <p> <b>@{{ username }}</b> tweeted: " {{ tweet }} "  <br> tweet url: <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer">https://twitter.com/{{username}}/status/{{id}}</a></p> 
@@ -58,12 +58,12 @@
                     temporarily disable delete button since it does not work on heroku
                     given error is something like: cannot found twitter.API() module
                     maybe try using the generic twitter API delete call
-                -->
+                
                 <form action="{{ url_for('delete_tweet') }}" method="POST">
                     <input type="hidden" id="index" name="index" value="{{ loop.index }}">
                     <input type="image" name="submit" src="{{ url_for('static', filename='delete.png') }}" alt="submit" style="width: 15px; height: 15px;" onclick="success()">
                 </form>
-                
+                -->
                 <br>
                 {% endfor %}
 
