--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -33,6 +33,7 @@
             <div id="main">
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
+                <p id="main_text">(Do not refresh this page, otherwise an error may occur)</p>
                <br>
                <br>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
@@ -45,7 +46,6 @@
                 {% endif %}
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
                 <h4>Tip 2: Protected Twitter accounts will not work with this due to how the Twitter search works.</h4>
-                <h4>(Do not refresh this page, otherwise an error may occur)</h4>
                 {% for tweet,id,username in zipped %}
                <!-- <p> <b>@{{ username }}</b> tweeted: " {{ tweet }} "  <br> tweet url: <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer">https://twitter.com/{{username}}/status/{{id}}</a></p> 
                 <a href=# id="test"><img src="{{ url_for('static', filename='delete.png') }}" class="delete_button" style="width: 15px; height: 15px;"/></a> -->
