--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -39,6 +39,10 @@
                 If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
+            <div id="div1">
+                
+            </div>
+
             <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
                 <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
              </blockquote>
