--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -36,22 +36,27 @@
             </p>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
-                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or tweet me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
+            <br>
 
             <div id="div1">
-
+                
             </div>
 
+            <!-- 
+            <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
+                <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
+             </blockquote>
+            -->
 
-    
             <h4>Known Bugs</h4>
             <p id="main_text">
                 When trying to login, a failure may occur which results in an error page. <br> This is a known bug that strangely only happens sometimes.<br>
                 I am working on a solution to fix this. Please try following the steps<br>provided on the error page if it does not work on the first login attempt.
             </p>
 
-            <h4>Disclaimers</h4>
+            <h4>Additional Info</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
@@ -59,7 +64,9 @@
                 <br><br>
                 This is my first official project, so it may not be perfect.<br>Please contact me if there any major bugs.
                 <br><br>
-                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.<br>Ultimately, I hope this can be used responsibly.
+                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.
+                <br><br>
+                Ultimately, I hope this can be used responsibly.
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
