--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,7 @@ body {
     height: 100%
 }
 h1 {
-    font-family: 'Lucida Bright', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Cambria', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0 auto;
     text-align: left;
     display: inline;
