--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,6 +35,7 @@ p {
     width: 100%;
     height: 100px;
 }
+
 #div2 {
     display: flex;
     background-color: aliceblue;
@@ -44,6 +45,12 @@ p {
     text-align: center;
     background-color: aliceblue;
     min-height: 100%;
+}
+#div3 {
+    display: flex;
+    background-color: #4D6180;
+    width: 100%;
+    height: 50px;
 }
 
 #main {
