--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,9 +48,9 @@ p {
 }
 #div3 {
     display: flex;
-    background-color: #4D6180;
+    background-color: #263040;
     width: 100%;
-    height: 50px;
+    height: 25px;
 }
 
 #main {
