--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -25,16 +25,16 @@
     <div id="div2alt">
         <div id="main">
             <br>
-            <h2>Get Started:</h2>
-            <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
+            <div style="background-color: #4D6180;">
 
-            <h2>What is Am I Cancelled?</h2>
-            <p id="main_text">
-                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
-                <br>
-            </p>
-            <div id="div3">
+                <h2>Get Started:</h2>
+                <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
                 
+                <h2>What is Am I Cancelled?</h2>
+                <p id="main_text">
+                    Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
+                    <br>
+                </p>
             </div>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
