--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -35,7 +35,7 @@
             </p>
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
-                If you wish to know the list of words used or have any words<br>to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                If you have any words to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
             <!-- 
