--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -33,6 +33,9 @@
                 Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
                 <br>
             </p>
+            <div id="inner_div">
+
+            
             <h2>Have Word Suggestions?</h2>
             <p id="main_text">
                 If you have any words to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
@@ -72,7 +75,7 @@
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
-
+        </div>
         </div>
     </div>
     <script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
