--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,6 +29,10 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+#h2_white {
+    color: white;
+}
+
 #div1 {
     display: flex;
     background-color: #4D6180;
@@ -164,6 +168,11 @@ p {
 }
 
 #main_text {
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+#main_text_white {
     color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
