--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,7 +58,7 @@ p {
 }
 
 #inner_div {
-    background-color: #8AAEE6;
+    background-color: #4D6180;
     padding: 20px;
 }
 
@@ -173,7 +173,7 @@ p {
     text-align: center;
 }
 #main_text_white {
-    color: black;
+    color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
