--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,7 +35,7 @@ p {
 
 #div1 {
     display: flex;
-    background-color: #4D6180;
+    background-color: #263040;
     width: 100%;
     height: 100px;
 }
