--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -62,7 +62,7 @@ p {
 }
 
 #footer {
-    background-color: #4D6180;
+    background-color: #1DA1F2;
     position: relative;
     height: 50px;
     margin-top: -50px;
