--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -21,7 +21,6 @@
         <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo"></h1>
     </div>
 
-
     <div id="div2alt">
         <div id="main">
 
@@ -36,6 +35,9 @@
                 </p>
             </div>
 
+            <div id="inner_2">
+
+            
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
                 If you have any words to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
@@ -61,7 +63,7 @@
                 </p>
             -->
                 
-            <h4>Additional Info</h4>
+            <h4>Additional Information</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
@@ -75,7 +77,7 @@
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
-
+            </div>
         </div>
     </div>
     <script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
