--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -25,11 +25,11 @@
         <div id="main">
 
             <div id="inner_div">
-                <h2 id="h2_white">Get Started:</h2>
+                <h2 id="h2">Get Started:</h2>
                 <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
                 
-                <h2 id="h2_white">What is Am I Cancelled?</h2>
-                <p id="main_text_white">
+                <h2 id="h2">What is Am I Cancelled?</h2>
+                <p id="main_text">
                     Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
                     <br>
                 </p>
@@ -45,10 +45,6 @@
 
             <!-- 
             <br>
-
-            <div id="div1">
-                
-            </div>
 
             <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
                 <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
