--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -21,29 +21,27 @@
         <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo"></h1>
     </div>
 
-
     <div id="div2alt">
         <div id="main">
-            <br>
-            <h2>Get Started:</h2>
-            <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
 
-            <h2>What is Am I Cancelled?</h2>
-            <p id="main_text">
-                Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
-                <br>
-            </p>
-            <h2>Have Word Suggestions?</h2>
+            <div id="inner_div">
+                <h2 id="h2_white">Get Started:</h2>
+                <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
+                
+                <h2 id="h2_white">What is Am I Cancelled?</h2>
+                <p id="main_text_white">
+                    Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
+                    <br>
+                </p>
+            </div>
+
+            <h4>Have Word Suggestions?</h4>
             <p id="main_text">
                 If you have any words to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
             <!-- 
             <br>
-
-            <div id="div1">
-                
-            </div>
 
             <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
                 <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
@@ -58,7 +56,7 @@
                 </p>
             -->
                 
-            <h4>Additional Info</h4>
+            <h4>Additional Information</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
