--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -47,7 +47,7 @@ p {
 #div2alt {
     display: block;
     text-align: center;
-    background-color: white;
+    background-color: aliceblue;
     min-height: 100%;
 }
 
