--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -37,7 +37,7 @@
 
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
-                If you have any words to suggest that may not be included in the search,<br>please email me using the email link in the footer of this page.<br> Or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                If you have any words to suggest that may not be included<br>in the search, please email me using the email link in the footer<br>of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
             <!-- 
