--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -85,7 +85,7 @@ p {
     width: 25px;
 }
 #backButton {
-    background-color: #4D6180;
+    background-color: #1DA1F2;
     border: none; 
     color: white; 
     font-size: 16px;
@@ -93,7 +93,7 @@ p {
     transition-duration: 0.3s;
 }
 #backButton:hover {
-    background-color: #263040;
+    background-color: #0F5480;
     color: white;
 }
 
