--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -25,18 +25,18 @@
         <div id="main">
 
             <div id="inner_div">
-                <h2 id="h2_white">Get Started:</h2>
+                <h2 id="h2">Get Started:</h2>
                 <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
                 
-                <h2 id="h2_white">What is Am I Cancelled?</h2>
-                <p id="main_text_white">
+                <h2 id="h2">What is Am I Cancelled?</h2>
+                <p id="main_text">
                     Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
                     <br>
                 </p>
             </div>
 
             <h4>Have Word Suggestions?</h4>
-            <p id="main_text">
+            <p id="main_text_white">
                 If you have any words to suggest that may not be included<br>in the search, please email me using the email link in the footer<br>of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
@@ -57,7 +57,7 @@
             -->
                 
             <h4>Additional Information</h4>
-            <p id="main_text">
+            <p id="main_text_white">
                 Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
                 <br><br>
                 I do <b>not</b> collect or store any of your information.<br>All of the authentication is done following the Twitter + OAuth standard.
