--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@ body {
 h1 {
     font-family: 'Cambria', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
     display: inline;
 }
 h2 {
