--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,7 @@ h1 {
     font-family: 'Cambria', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0 auto;
     text-align: left;
-    display: block;
+    display: inline;
 }
 h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
