--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -34,8 +34,9 @@
                     <br>
                 </p>
             </div>
-            
+
             <br>
+            <p>For the best experience, it's recommended to open this webpage in a full browser such as Safari or Chrome, separate from opening the webpage from a link (ie. Snapchat, Instagram)</p>
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
                 If you have any words to suggest that may not be included<br>in the search, please email me using the email link in the footer<br>of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
