--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -33,7 +33,7 @@
             <div id="main">
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
-                <p id="main_text">(Do not refresh this page, otherwise an error may occur)</p>
+                <p id="main_text">(Do not refresh this page, otherwise an error may occur. Tweets may take time to load.)</p>
                <br>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
                 <br>
