--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -34,6 +34,7 @@
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
                 <p id="main_text">(Do not refresh this page, otherwise an error may occur. Tweets may take time to load.)</p>
+                <p id="main_text">(Protected Twitter accounts will not work with this due to how the Twitter search works.)</p>
                <br>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
                 <br>
@@ -47,7 +48,6 @@
                     <h3>There were more than {{ naughtyCount }} tweets found, please delete some then sign in again.</h3>
                 {% endif %}
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
-                <h4>Tip 2: Protected Twitter accounts will not work with this due to how the Twitter search works.</h4>
                 {% for tweet,id,username in zipped %}
                <!-- <p> <b>@{{ username }}</b> tweeted: " {{ tweet }} "  <br> tweet url: <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer">https://twitter.com/{{username}}/status/{{id}}</a></p> 
                 <a href=# id="test"><img src="{{ url_for('static', filename='delete.png') }}" class="delete_button" style="width: 15px; height: 15px;"/></a> -->
