--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -32,6 +32,10 @@
                 <p id="main_text">Please go back to the app homepage using the button below and try again.</p>
                  
                  <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
+                 <br>
+                 <p id="main_text">
+                    You can also contact me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                </p>
             </div>
         </div>
 
