--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -34,7 +34,7 @@
                  <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
                  <br>
                  <p id="main_text">
-                    You can also contact me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                    You can also contact me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3</a> if there are still issues.
                 </p>
             </div>
         </div>
