--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -34,7 +34,7 @@
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
                 <p id="main_text">(Do not refresh this page, otherwise an error may occur. Tweets may take time to load.<br>Don't forget to keep scrolling down the page if there is an empty section!)</p>
-                <p id="main_text"><b>(Protected Twitter accounts will not work with this due to how the Twitter search works.)</b></p>
+                <p id="main_text"><b>Protected Twitter accounts will not work with this due to how the Twitter search works.</b></p>
                <br>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
                 <br>
