--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -12,6 +12,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <script data-ad-client="ca-pub-2309537375318258" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <title>Am I Cancelled? Start Page</title>
 </head>
 
