--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -10,6 +10,9 @@
         <link rel="mask-icon" href="{{ url_for('static', filename='safari-pinned-tab.svg') }}" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
+
+        <script data-ad-client="ca-pub-2309537375318258" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
         <title>App Error!</title>
     </head>
 
